change fonts url to https

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom styles for this template -->
-<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
 <link href="css/jquery.pageslide.css" rel="stylesheet">
 <link href="css/nuvitek.css" rel="stylesheet">
 
@@ -155,7 +155,7 @@ Our services put technology to work for our customers and make them better at th
           <div class="media-body">
               <h3>Open Positions</h3>
               <p>contact us @ careers@nuvitek.com</p>
-  				<ul>
+  				<ul >
   				  				<li >Cloud Solutions Architect</li>
   				  				<li>Virtualization Engineer</li>
   				  				<li>Network Engineer</li>
@@ -245,7 +245,7 @@ Our services put technology to work for our customers and make them better at th
           <span class="circol glyphicon glyphicon-thumbs-up pull-left media-object"></span>
           <div class="media-body">
             <h3 class="section-text">Expertise</h3>
-			<ul class="section-text">
+			<ul class="list-unstyled section-text">
 			  				<li>AWS IaaS, PaaS</li>
 							<li>VMWare IaaS</li>
 							<li>OpenStack IaaS</li>
