service icon clickable

--- a/index.html
+++ b/index.html
@@ -91,19 +91,20 @@ Our services put technology to work for our customers and make them better at th
     </div>
     <div class="row">
       <div class="col-md-4 col-sm-4">
-        <article class="boxFeature-2"> <span class="circo1 glyphicon glyphicon-cloud-upload"></span>
+       <article class="boxFeature-2"><a href="#cloud"><span class="circo1 glyphicon glyphicon-cloud-upload"></span> </a>
           <h3>Cloud</h3>
           <p>We understand cloud, don’t take on the cloud transition alone, let our cloud experts  design, build and support your cloud infrastructure. </p>
           <a href="#cloud" class="btns">Learn more</a> </article>
+	 
       </div>
       <div class="col-md-4 col-sm-4">
-        <article class="boxFeature-2"> <span class="circo2 glyphicon glyphicon-cog"></span>
+        <article class="boxFeature-2"> <a href="#transformation"><span class="circo2 glyphicon glyphicon-cog"></span></a>
           <h3>Automation</h3>
           <p>Enable your IT to be responsive IT, responding to business needs speedily, accelerate delivery time, innovate the way people work with continuous delivery.</p>
           <a href="#automation" class="btns">Learn more</a> </article>
       </div>
       <div class="col-md-4 col-sm-4">
-        <article class="boxFeature-2"> <span class="circo4 glyphicon glyphicon-road"></span>
+        <article class="boxFeature-2"> <a href="#transformation"><span class="circo4 glyphicon glyphicon-road"></span></a>
           <h3>Transformation</h3>
           <p>Modernize your applications and transition to a new model of IT that is application centric, simple, secure, flexible and automated.</p>
           <a href="#transformation" class="btns">Learn more</a> </article>
@@ -111,21 +112,21 @@ Our services put technology to work for our customers and make them better at th
     </div>
     <div class="row">
       <div class="col-md-4 col-sm-4">
-        <article class="boxFeature-2"> <span class="circo4 glyphicon glyphicon-tasks"></span>
+        <article class="boxFeature-2"> <a href="#operations"><span class="circo4 glyphicon glyphicon-tasks"></span></a>
           <h3>Operations</h3>
           <p>Let us help you with your day to day operations so you can focus on your mission. With our automated operations, we can help run all aspects of your day-to-day IT operations</p>
           <a href="#operations" class="btns">Learn more</a> </article>
       </div>
       <div class="col-md-4 col-sm-4">
-        <article class="boxFeature-2"> <span class="circo5 glyphicon glyphicon-stats"></span>
+        <article class="boxFeature-2"> <a href="#data"><span class="circo5 glyphicon glyphicon-stats"></span></a>
           <h3>Data</h3>
-          <p>Get your data infrastructure ready for modern Applications. Let us modernize your data infrastructure to be flexible and scalable to meet your growing data needs.</p>
+          <p>Get your data infrastructure ready for modern Applications, modernize your data infrastructure to be flexible and scalable to meet your growing data needs.</p>
           <a href="#data" class="btns">Learn more</a> </article>
       </div>
       <div class="col-md-4 col-sm-4">
-        <article class="boxFeature-2"> <span class="circo6 glyphicon glyphicon-dashboard"></span>
+        <article class="boxFeature-2"> <a href="#servicemanagement"><span class="circo6 glyphicon glyphicon-dashboard"></span></a>
           <h3>Service Management</h3>
-          <p>Enable your IT to be a service focused organization. We will help you integrate and provide a single point of contact support for all the services delivered. 
+          <p>Enable your IT to be a service focused organization, let us help you integrate and provide a single point of contact support for all the services delivered. 
 </p>
           <a href="#servicemanagement" class="btns">Learn more</a> </article>
       </div>
@@ -153,8 +154,8 @@ Our services put technology to work for our customers and make them better at th
         <div class="media">
           <span class="circol glyphicon glyphicon-th pull-left media-object"></span>
           <div class="media-body">
-              <h3>Open Positions</h3>
-              <p>contact us @ careers@nuvitek.com</p>
+              <h3>Jobs @ Nuvitek</h3>
+              <p>Apply for following open positions @ careers@nuvitek.com</p>
   				<ul >
   				  				<li >Cloud Solutions Architect</li>
   				  				<li>Virtualization Engineer</li>
@@ -186,8 +187,9 @@ Our services put technology to work for our customers and make them better at th
   							<li>Paid Holidays</li>
   							<li>Short-Term Disability</li>
   							<li>Long-Term Disability</li>
-  							<li>Life Insurance</li>
-  							<li>Bonuses for Referrals</li>
+  							<li>Group Life Insurance</li>
+  							<li>Referral Bonus</li>
+							<li>Performance Bonus</li>
 							
   						</ul>
             
@@ -232,8 +234,8 @@ Our services put technology to work for our customers and make them better at th
           <span class="circol glyphicon glyphicon-cloud pull-left media-object"></span>
           <div class="media-body">
             <h3>Your Cloud, Your Way <br></h3>
-            <p class="section-text">Hype aside, cloud solutions offer many benefits to an organizaion, from reduced costs, faster provisioning of systems and applications, scalable to any changes in demand.Let us help you utilize cloud technlogies and making your work place better. </p>
-			<p class="section-text">Our cloud solutions eingineers will look at your current infrastructure and work with you to determine which applications will deliver the the most benefit by migrating to a cloud platform, be it a public or private cloud, SaaS, PaaS, or IaaS, we help you determine optimal use of cloud technologies based on the characteristic and security requirements of the application. </p>
+            <p class="section-text">Hype aside, cloud solutions offer many benefits to an organization, from reduced costs, faster provisioning of systems and applications, scalable to any changes in demand.Let us help you utilize cloud technologies and making your work place better. </p>
+			<p class="section-text">Our cloud solutions engineers will look at your current infrastructure and work with you to determine which applications will deliver the the most benefit by migrating to a cloud platform, be it a public or private cloud, SaaS, PaaS, or IaaS, we help you determine optimal use of cloud technologies based on the characteristic and security requirements of the application. </p>
 			<p class="section-text">Our cloud architects will work with you to design and implement cloud solutions and support you with the transition at every step of the way. We will provide end-to-end cloud migration support including analysis, design, migration and on-going support. 
             </p>
 			
@@ -572,25 +574,26 @@ Our services put technology to work for our customers and make them better at th
   <div class="container">
     <div class="row">
       <div class="col-md-12"><h2>Get in Touch</h2>
-        <p class="lead-text">Feel free to contact us for any inquiries, if you have any questions about our work or just say hello.</p>
+        <p class="lead-text">Feel free to contact us for any inquiries, if you have any questions about our services or just say hello.</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 col-sm-6">
-          <div class="contacts"> <span class="contactico glyphicon glyphicon-send pull-left"></span>
-            <div class="pull-left"><a href="https://docs.google.com/a/nuvitek.com/forms/d/10YVQR2MBn0aGWKMJPAs19mXNRDdxiDY-J8tAYQrkSoM/viewform" class="btn-sep">Contact Form</a> </div>
+          <div class="contacts"> <span class="contactico glyphicon glyphicon-comment pull-left"></span>
+            <div class="pull-left"><a href="https://docs.google.com/a/nuvitek.com/forms/d/10YVQR2MBn0aGWKMJPAs19mXNRDdxiDY-J8tAYQrkSoM/viewform" class="btn-contact">Contact Form</a> </div>
             <div class="clearfix"></div>
           </div>
         <div class="contacts"> <span class="contactico glyphicon glyphicon-map-marker pull-left"></span>
-          <div class="pull-left">13800 Coppermine Rd., <br>
-            Herndon, VA 20171</div>
+          <div class="pull-left">Nuvitek LLC <br>
+			  13800 Coppermine Rd. <br>
+            Herndon VA 20171</div>
           <div class="clearfix"></div>
         </div>
         <div class="contacts"> <span class="contactico glyphicon glyphicon-earphone pull-left"></span>
           <div class="pull-left">612-888-6884</div>
           <div class="clearfix"></div>
         </div>
-        <div class="contacts"> <span class="contactico glyphicon glyphicon-send pull-left"></span>
+        <div class="contacts"> <span class="contactico glyphicon glyphicon-envelope pull-left"></span>
           <div class="pull-left">getintouch@nuvitek.com</div>
           <div class="clearfix"></div>
         </div>
@@ -598,6 +601,8 @@ Our services put technology to work for our customers and make them better at th
     </div>
   </div>
 </section>
+
+
 <section id="copyrights">
   <div class="container"><a class="copy-arrow-up" href="#welcome">hello</a>
     <div class="row">
