change section text color

--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@ Our services put technology to work for our customers and make them better at th
           <span class="circol glyphicon glyphicon-thumbs-up pull-left media-object"></span>
           <div class="media-body">
             <h3 class="section-text">Expertise</h3>
-			<ul class="list-unstyled section-text">
-			  				<li>AWS IaaS, PaaS</li>
+			<ul class="section-text">
+			  				<li >AWS IaaS, PaaS</li>
 							<li>VMWare IaaS</li>
 							<li>OpenStack IaaS</li>
 							<li>RackSpace IaaS</li>
