work with us section changes

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@ Our services put technology to work for our customers and make them better at th
           <span class="circol glyphicon glyphicon-gift pull-left media-object"></span>
           <div class="media-body">
               <h3>Benefits</h3>
-  			<p>We are committed to a happy workforce, we offer a competitive benefits package to our employees: 
+  			<p>We understand our success depends on our employee’s dedication and commitment, we offer a competitive benefits package to our employees. Our compensation and benefits address employee’s health, wellness and career growth. 
+			</p>
   			<ul>
   			  				<li>Medical Insurance</li>
   			  				<li>Dental Insurance</li>
@@ -185,6 +186,7 @@ Our services put technology to work for our customers and make them better at th
   							<li>401(k) Savings Plan</li>
   							<li>Paid Time off </li>
   							<li>Paid Holidays</li>
+							<li>Time off for Tech Events</li>
   							<li>Short-Term Disability</li>
   							<li>Long-Term Disability</li>
   							<li>Group Life Insurance</li>
@@ -248,7 +250,7 @@ Our services put technology to work for our customers and make them better at th
           <div class="media-body">
             <h3 class="section-text">Expertise</h3>
 			<ul class="section-text">
-			  				<li >AWS IaaS, PaaS</li>
+			  				<li>AWS IaaS, PaaS</li>
 							<li>VMWare IaaS</li>
 							<li>OpenStack IaaS</li>
 							<li>RackSpace IaaS</li>
