--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ Our services put technology to work for our customers and make them better at th
 <section id="quotes">
   <div class="container"> <a class="quote-arrow-up" href="#services">hello</a>
     <div class="row">
-      <div class="col-md-12"><p>Nuvitek goes above and beyond the call of duty in getting this done, they are always ahead in transforming our ideas and vision to reality, they know technology and are a great team to work with, could not have done IT with out them.</p>
+      <div class="col-md-12"><p>Nuvitek goes above and beyond the call of duty in getting things done, they are always ahead in transforming our ideas and vision to reality, they know technology and are a great team to work with, could not have done IT with out them.</p>
       <p class="quoter">CIO, Federal Agency</p>
       </div>
     </div>
