made main image clickable

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-sm-5">
-        <div class="welcome-img"></div>
+        <div> <a href="#workwithus" class="welcome-img"></a></div> 
       </div>
       <div class="col-md-7 col-sm-7">
         <h2>Hello.</h2>
