made about image clickable

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		
         <p>We are always learning, we are not afraid to experiment with new technologies and disrupt the status quo by challenging conventional wisdom, be it cloud computing, devops or software defined networking, not just the hype but actually implementing solutions that take advantage of these new technologies and helping customers transform from where they are to where they want to be in the future, the emerging technology model, always ahead model.</p>
       </div>
-      <div class="col-md-4 col-sm-4"><br><br><img src="img/about.png" alt="Nuvitek" class="center-block img-responsive"></div>
+      <div class="col-md-4 col-sm-4"><br><br><a href="#services"><img src="img/about.png" alt="Nuvitek" class="center-block img-responsive"></a></div>
     </div>
   </div>
 </section>
