--- a/index2.html
+++ b/index2.html
@@ -669,9 +669,11 @@ Our services put technology to work for our customers and make them better at th
 			                    statusCode: {
 			                        0: function() {
 			                            //Success message
+										"Submitted"
 			                        },
 			                        200: function() {
 			                            //Success Message
+										"Submitted2"
 			                        }
 			                    }
 			                });
