--- a/index2.html
+++ b/index2.html
@@ -661,10 +661,10 @@ Our services put technology to work for our customers and make them better at th
 			     }
 				 
 			     function postContactToGoogle(){
-			         var name = $j('#name').val();
-			         var email = $j('#email').val();
-					 var phone = $j('#phone').val();
-			         var feed = $j('#message').val();
+			         var name = $('#name').val(); 
+			         var email = $('#email').val();
+					 var phone = $('#phone').val();
+			         var feed = $('#message').val();
 			         if ((name !== "") && (email !== "") && ((message !== "") && (validateEmail(email)))) {
 			             $j.ajax({
 			                 url: "https://docs.google.com/forms/d/10YVQR2MBn0aGWKMJPAs19mXNRDdxiDY-J8tAYQrkSoM/formResponse",
@@ -674,17 +674,17 @@ Our services put technology to work for our customers and make them better at th
 			                 statusCode: {
 			                     0: function (){
  
-			                         $j('#name').val("");
-			                         $j('#email').val("");
-									 $j('#phone').val("");
-			                         $j('#message').val("");
+			                         $('#name').val("");
+			                         $('#email').val("");
+									 $('#phone').val("");
+			                         $('#message').val("");
 			                         //Success message
 			                     },
 			                     200: function (){
-			                         $j('#name').val("");
-			                         $j('#email').val("");
-									 $j('#phone').val("");
-			                         $j('#message').val("");
+			                         $('#name').val("");
+			                         $('#email').val("");
+									 $('#phone').val("");
+			                         $('#message').val("");
 			                         //Success Message
 			                     }
 			                 }
