--- a/index2.html
+++ b/index2.html
@@ -666,7 +666,7 @@ Our services put technology to work for our customers and make them better at th
 					 var phone = $('#phone').val();
 			         var feed = $('#message').val();
 			         if ((name !== "") && (email !== "") && ((message !== "") && (validateEmail(email)))) {
-			             $j.ajax({
+			             $.ajax({
 			                 url: "https://docs.google.com/forms/d/10YVQR2MBn0aGWKMJPAs19mXNRDdxiDY-J8tAYQrkSoM/formResponse",
 			                 data: {"entry.1407281520" : name, "entry.1812949067" : email, "entry.2033205632" : phone,"entry.1309773188": message},
 			                 type: "POST",
