--- a/index2.html
+++ b/index2.html
@@ -672,11 +672,11 @@ Our services put technology to work for our customers and make them better at th
 			                 statusCode: {
 			                     0: function (){
 			                         //Success message
-									 alert("message posted");
+									
 			                     },
 			                     200: function (){
 			                         
-			                          alert("message posted");//Success Message
+			                         //Success Message
 			                     }
 			                 }
 			             });
