--- a/index2.html
+++ b/index2.html
@@ -672,7 +672,8 @@ Our services put technology to work for our customers and make them better at th
 									 $('#email').val("");
 									 $('#phone').val("");
 									 $('#message').val("");
-			                         alert("Thank you for your interest in our services, we will be intouch with you shortly")//Success message
+			                         alert("Thank you for your interest in our services, we will be intouch with you shortly");//Success message
+									 window.location.replace("#services");
 									
 			                     },
 			                     200: function (){
@@ -681,7 +682,8 @@ Our services put technology to work for our customers and make them better at th
 									 $('#email').val("");
 									 $('#phone').val("");
 									 $('#message').val("");
-			                          alert("Thank you for your interest in our services, we will be intouch with you shortly")////Success Message
+									 alert("Thank you for your interest in our services, we will be intouch with you shortly");////Success Message
+									 window.location.replace("#services");
 			                     }
 			                 }
 			             });
