--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,9 @@
 
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/jAlert-v2-min.css" rel="stylesheet">
+
+
 
 <!-- Custom styles for this template -->
 <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -26,6 +29,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
+<script src='js/Alert-v2-min.js'></script>
 </head>
 
 <body data-spy="scroll" data-target=".nuvinav" data-offset="156">
