--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
-<script src='js/Alert-v2-min.js'></script>
+<script src='js/jAlert-v2-min.js'></script>
 </head>
 
 <body data-spy="scroll" data-target=".nuvinav" data-offset="156">
