better alert box

--- a/index2.html
+++ b/index2.html
@@ -676,8 +676,12 @@ Our services put technology to work for our customers and make them better at th
 									 $('#email').val("");
 									 $('#phone').val("");
 									 $('#message').val("");
-			                         alert("Thank you for your interest in our services, we will be intouch with you shortly");//Success message
-									 window.location.replace("#services");
+									 $.fn.jAlert({
+									 	'title': 'Message Received',
+									 	'message': 'Thank you for your interest in our services, we will be intouch with you shortly'
+									 });
+			                        // alert("Thank you for your interest in our services, we will be intouch with you shortly");//Success message
+									 window.location.replace("#welcome");
 									
 			                     },
 			                     200: function (){
@@ -686,8 +690,12 @@ Our services put technology to work for our customers and make them better at th
 									 $('#email').val("");
 									 $('#phone').val("");
 									 $('#message').val("");
-									 alert("Thank you for your interest in our services, we will be intouch with you shortly");////Success Message
-									 window.location.replace("#services");
+									 $.fn.jAlert({
+									 	'title': 'Message Received',
+									 	'message': 'Thank you for your interest in our services, we will be intouch with you shortly'
+									 });
+									 //alert("Thank you for your interest in our services, we will be intouch with you shortly");////Success Message
+									 window.location.replace("#welcome");
 			                     }
 			                 }
 			             });
