Integrated Contact Form

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Custom styles for this template -->
 <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
 <link href="css/jquery.pageslide.css" rel="stylesheet">
-<link href="css/nuvitek2.css" rel="stylesheet">
+<link href="css/nuvitek.css" rel="stylesheet">
 
 <!-- Just for debugging purposes. Don't actually copy this line! -->
 <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
