v3 index.html pages

--- a/v3/index.html
+++ b/v3/index.html
@@ -97,14 +97,14 @@ Nuvitek services put technology to work for our customers so that they can devot
       <div class="col-md-4 col-sm-4">
        <article class="boxFeature-2"><a href="#cloud"><span class="circo1 glyphicon glyphicon-cloud-upload"></span> </a>
           <h3>Cloud</h3>
-          <p>We understand the cloud. We understand the challenges of a cloud migration, and we know how to overcome them. It’s what we do. Let Nuvitek’s experts design, build and support your cloud infrastructure. </p>
+          <p>We understand the cloud. We understand the challenges of a cloud migration, and we know how to overcome them. Let Nuvitek’s experts design, build and support your cloud. </p>
           <a href="#cloud" class="btns">Learn more</a> </article>
 	 
       </div>
       <div class="col-md-4 col-sm-4">
         <article class="boxFeature-2"> <a href="#transformation"><span class="circo2 glyphicon glyphicon-cog"></span></a>
           <h3>Automation</h3>
-          <p>Everyone talks about doing more with less. The truth is you need more to do more. More automation so you do less. Nuvitek will enable your IT systems to serve your business needs by speeding up delivery times, providing innovative ways to collaborate among your teams and with your customers, and offering efficiencies in the way workers and customers interact through continuous delivery.</p>
+          <p> More automation so you do less. Nuvitek will enable your IT systems to serve your business needs fast by speeding up delivery times through continuous delivery.</p>
           <a href="#automation" class="btns">Learn more</a> </article>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -118,7 +118,7 @@ Nuvitek services put technology to work for our customers so that they can devot
       <div class="col-md-4 col-sm-4">
         <article class="boxFeature-2"> <a href="#operations"><span class="circo4 glyphicon glyphicon-tasks"></span></a>
           <h3>Operations</h3>
-          <p>We will transform your day-to-day operations so you can focus on your mission. With our automated systems, Nuvitek can help run all aspects of your routine IT activities.</p>
+          <p>We will transform your day-to-day operations so you can focus on your mission. With our automated systems, Nuvitek can help run all of your routine IT activities.</p>
           <a href="#operations" class="btns">Learn more</a> </article>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -218,9 +218,8 @@ Nuvitek services put technology to work for our customers so that they can devot
           <span class="circol glyphicon glyphicon-cog pull-left media-object"></span>
           <div class="media-body">
             <h3>Automate, All the Way</h3>
-            <p class="section-text">
-				Enable your IT to be responsive IT </p>
-				<p class="section-text">Automate your IT systems and remove bottlenecks caused by manual application and infrastructure provisioning — convert to an application-centric infrastructure.</p>
+            
+				<p class="section-text">Everyone talks about doing more with less. The truth is you need more to do more.More automation so you do less. Automate your IT systems and remove bottlenecks caused by manual application and infrastructure provisioning — convert to an application-centric infrastructure.</p>
 				<p class="section-text">Let Nuvitek help you set up tools to provide continuous deployment, integration and monitoring; tools that will enable you to respond to the needs of application environments in hours instead of months and scale resources in minutes, not hours.</p>
 				<p class="section-text"> Our DevOps engineers will work with you to study your current processes and design and build an automation framework that will enable your infrastructure to be API-centric with automated deployments across test and production environments.
 				</p>
