v3 index.html pages

--- a/v3/index.html
+++ b/v3/index.html
@@ -186,11 +186,13 @@ Nuvitek services put technology to work for our customers so that they can devot
 							<li>Box.com SaaS</li>
 							<li>ZenDesk SaaS</li>
 							<li>DaaS</li>
-							<li>Service Now SaaS</li>					
+							<li>Service Now SaaS</li>	
+											
 						</ul>
+			
         </div>
 		
-      </div>
+      <img src="img/APN_Standard_Consulting_Partner.png" alt="Nuvitek"></div>
     </div>
     
     </div> 
