add validation to contact form

--- a/v3/index.html
+++ b/v3/index.html
@@ -673,9 +673,8 @@ Nuvitek services put technology to work for our customers so that they can devot
 									 $('#phone').val("");
 									 $('#message').val("");
 									 $.fn.jAlert({
-									 	'title': 'Message Not Received - Required Information Missing',
-									 	'message': 'Please fill out the required fields so we can get in tocuh with you',
-										'theme': 'error'
+									 	'title': 'Message Received',
+									 	'message': 'Thank you for your interest in our services, we will be in touch with you shortly'
 									 });
 			                        // alert("Thank you for your interest in our services, we will be in touch with you shortly");//Success message
 									 window.location.replace("#contact");
