--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <div class="col-md-7 col-sm-7">
         <h2>Hello.</h2>
-        <p class="lead-text">The talented team of engineers at Nuvitek are passionate about solving your technology problems. We collaborate with you to improve your organization’s performance through technological innovation and by delivering IT services that are faster and more efficient. </p> 
+        <p class="lead-text">We are a talented team of engineers who are passionate about solving technology problems. We collaborate with you to improve your organization’s performance through technological innovation and by delivering IT services that are faster and more efficient. </p> 
 			<p ><h4>Simple, flexible, automated and secure — that’s the Nuvitek way.</h4></p>
         <a href="#services" class="btn">This is our Story!</a></div>
     </div>
@@ -83,11 +83,11 @@
       <div class="col-md-8 col-sm-8">
         <h2>About Us </h2>
 		<h3>We Believe</h3>
-        <p>With the right team and the right technology, IT organizations can solve complex problems and make your business leaner, faster and more flexible. We believe in getting things done effectively and efficiently with streamlined, innovative solutions. Nuvitek’s team of engineers is constantly researching and implementing new solutions to help our clients overcome their business and technology challenges. We believe in providing added value for our customers by being part of your team, helping you excel, deliver and achieve your goals. Nuvitek believes in going above-and-beyond and delivering results — outstanding results. 
+        <p>With the right team and the right technology, IT organizations can solve complex problems and make your business leaner, faster and more flexible. We believe in getting things done effectively and efficiently with simple, innovative solutions. Our team of engineers is constantly researching and implementing new solutions to help our clients overcome their business and technology challenges. We believe in providing added value for our customers by being part of your team, helping you excel, deliver and achieve your goals. Nuvitek believes in going above-and-beyond and delivering results — outstanding results. 
  </p>
 <h3> Our Experience</h3>
  
-        <p>Our team of engineers has more than 20 years of experience delivering successful IT projects to Federal Government. With our strong pool of seasoned, expert staff, Nuvitek has a sterling track record of providing innovative and reliable IT solutions to both government and commercial clients. </p>
+        <p>Our team of engineers has more than 20 years of experience delivering successful IT projects to Federal Government and commercial clients. With our strong pool of talented, expert staff, Nuvitek has a sterling track record of providing innovative and reliable IT solutions to both government and commercial clients. </p>
 		<h3>Continuous Improvement</h3>
 		
         <p>At Nuvitek, we are always learning and adapting. We embrace innovating with new technologies and challenging conventional wisdom, be it via cloud computing, DevOps or software-defined networking. Nuvitek goes beyond the hype to implement solutions that take advantage of cutting edge technologies and help customers move quickly to where they need to be: The emerging technology model, the one-step-ahead model.</p>
@@ -101,7 +101,7 @@
     <div class="row">
 	  <h2>FAST, FLEXIBLE, AGILE</h2>
       <p class="lead-text">
-Nuvitek services put technology to work for our customers so that they can devote all their energies to their core mission.</p>
+Our services put technology to work for our customers so that they can devote all their energies to their core mission.</p>
     </div>
     <div class="row">
       <div class="col-md-4 col-sm-4">
