--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@ Our services put technology to work for our customers so that they can devote al
             <h3 class="section-text">Expertise</h3>
 			<ul class="section-text">
 			  				<li>Application Modernization</li>
+							<li>Quality Assurance</li>
 			  				<li>Datacenter Modernization</li>
 			  				<li>Cloud Migration Strategy</li>
 							<li>Cloud Support Strategy</li>
@@ -371,6 +372,7 @@ Our services put technology to work for our customers so that they can devote al
 							<li>VDI Operations</li>
 							<li>Application Deployment</li>
 							<li>Application Monitoring</li>
+							<li>Application Testing</li>
 						</ul>
             
         </div>
