--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Nuvitek is a small business providing IT integration services to federal agencies and commercial firms. Our expertise include Cloud Integration, IT           
      Infrastructure Engineering, Datacenter Transformation and Bigdata Infrastructure.">
-<link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 <title>Nuvitek</title>
 
 <!-- Bootstrap core CSS -->
