--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Nuvitek is a small business providing IT integration services to federal agencies and commercial firms. Our expertise include Cloud Integration, IT           
-     Infrastructure Engineering, Datacenter Transformation and Bigdata Infrastructure.">
+<meta name="description" content="Nuvitek is a small business providing IT integration services to federal agencies and commercial firms. Our expertise include Cloud Services, IT Automation, IT Operations, BigData, DevOps, IT Transformation, Cloud Integration, IT Infrastructure Engineering, Datacenter Transformation and Bigdata Infrastructure.">
 <link rel="shortcut icon" href="/favicon.ico">
 <title>Nuvitek</title>
 
