--- a/index2.html
+++ b/index2.html
@@ -368,17 +368,6 @@ Our services put technology to work for our customers so that they can devote al
     </div>  
 </section>
   </section>
-  	<section id="service-divider">
-  	  <div class="container"> 
-  	    <div class="row ">
-  	      <div class="col-md-12"><p><a href="#contact" class="btn-sep">Contact us to learn more about Nuvitek’s IT operations expertise, expertise and past performance</a></p>
-			  
-  	      </div>
-  	    </div>
-  	  </div>
-  	</section> 
-  
-  
    	<section id="service-divider">
    	  <div class="container"> 
    	    <div class="row ">
@@ -483,9 +472,15 @@ Our services put technology to work for our customers so that they can devote al
           
         <div class="contacts"> <span class="contactico glyphicon glyphicon-map-marker pull-left"></span>
           <div class="pull-left">Nuvitek LLC <br>
+			  1775 Tysons Blvd, #6203 <br>
+            Tysons VA 22102</div>
+          <div class="clearfix"></div>
+        <div class="contacts"> <span class="contactico glyphicon glyphicon-map-marker pull-left"></span>
+          <div class="pull-left">Nuvitek LLC <br>
 			  13800 Coppermine Rd. <br>
             Herndon VA 20171</div>
           <div class="clearfix"></div>
+        </div>
         </div>
         <div class="contacts"> <span class="contactico glyphicon glyphicon-earphone pull-left"></span>
           <div class="pull-left">612-888-6884</div>
