--- a/index2.html
+++ b/index2.html
@@ -476,7 +476,7 @@ Our services put technology to work for our customers so that they can devote al
             Tysons VA 22102</div>
           <div class="clearfix"></div>
         <div class="contacts"> <span class="contactico glyphicon glyphicon-map-marker pull-left"></span>
-          <div class="pull-left">Nuvitek LLC <br>
+          <div class="pull-left"><br>
 			  13800 Coppermine Rd. <br>
             Herndon VA 20171</div>
           <div class="clearfix"></div>
