--- a/index2.html
+++ b/index2.html
@@ -281,6 +281,9 @@ Our services put technology to work for our customers so that they can devote al
 			<p class="section-text">Our experts will work with you to develop and implement a modernization plan to improve your infrastructure, deploy and optimize new technologies, migrate existing systems, institute new systems and retire legacy operations.
             </p>
 			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
           </div>
         </div>
       </div>
@@ -340,6 +343,9 @@ Our services put technology to work for our customers so that they can devote al
 	           
 			  <p class="section-text">We will ease the burden and provide a single point-of-contact for all your cloud operations. Our engineers have deep knowledge and experience in day-to-day operations of cloud-hosted services, so let us be the interface between you and your cloud providers while giving a level of service superior to your on-premise operations. </p>
               </p>
+  			<p></p>
+  			<p></p>
+  			<p></p>
   			<p></p>
           </div>
         </div>
@@ -475,8 +481,9 @@ Our services put technology to work for our customers so that they can devote al
 			  1775 Tysons Blvd, #6203 <br>
             Tysons VA 22102</div>
           <div class="clearfix"></div>
+        <br>
         <div class="contacts"> <span class="contactico glyphicon glyphicon-map-marker pull-left"></span>
-          <div class="pull-left"><br>
+          <div class="pull-left">
 			  13800 Coppermine Rd. <br>
             Herndon VA 20171</div>
           <div class="clearfix"></div>
