--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@ Our services put technology to work for our customers so that they can devote al
           
         <div class="contacts"> <span class="contactico glyphicon glyphicon-map-marker pull-left"></span>
           <div class="pull-left">Nuvitek LLC <br>
-			  1775 Tysons Blvd, #6203 <br>
-            Tysons VA 22102</div>
+			  1201 Wilson Blvd, Suite 25-115 <br>
+            Arlington VA 22209</div>
           <div class="clearfix"></div>
         <br>
         <div class="contacts"> <span class="contactico glyphicon glyphicon-map-marker pull-left"></span>
